changed to several routes

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <tour-of-heroes-app>Loading...</tour-of-heroes-app>
+  <app>Loading...</app>
 
   
 
